2002-12-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/Test.java:
	Changed parameters to read() method call to match API

2002-12-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/Test.java:
	Added test for connect() method on PipedWriter.  See corresponding
	patch to PipedWriter class.

2002-12-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/OutputStreamWriter/jdk11.java: New file.
	Completes tests of OutputStreamWriter class

2002-12-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterOutputStream/write.java: New file.
	These files complete direct tests of FilterOutputStream class

2002-12-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterInputStream/MarkReset.java: New file.
	* gnu/testlet/java/io/FilterInputStream/SimpleRead.java: New file.
	These files complete direct tests of FilterInputStream class

2002-12-22  Anthony Green  <green@redhat.com>

	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java: New file.

2002-12-22  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FileWriter/jdk11.java: complete 
	constructor tests for class (no other methods defined)

2002-12-22  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FileReader/jdk11.java: complete 
	constructor tests for class (no other methods defined)

2002-12-22  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FileDescriptor/jdk11.java: complete 
	method tests for class

2002-12-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java (check):
	Add base string to give a hint about from which URL source resource
	should get loaded.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: Set base.
	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: Likewise.

2002-12-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/StringBuffer/StringBufferTest.java (getChars):
	Add big offsets test.
